--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "devDependencies": {
     "chai": "^1.9.1",
     "chai-http": "^0.4.0",
+    "grunt": "^0.4.5",
+    "grunt-simple-mocha": "^0.4.0",
+    "jshint": "^2.5.2",
     "mocha": "^1.20.1"
   }
 }
