--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
-  "name" : "codefellows-notes",
-  "description" : "a simple full stack notes app for instruction",
-  "version" : "0.0.0"
+  "name": "codefellows-notes",
+  "description": "a simple full stack notes app for instruction",
+  "version": "0.0.0",
+  "dependencies": {
+    "express": "^4.6.1"
+  },
+  "devDependencies": {
+    "chai": "^1.9.1",
+    "chai-http": "^0.4.0",
+    "debowerify": "^0.8.1",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^2.1.3",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-simple-mocha": "^0.4.0",
+    "jshint": "^2.5.2",
+    "mocha": "^1.20.1"
+  }
 }
